// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RecipeCard on index match the snapshot 1`] = `
<div
  className="grid grid-flow-row grid-flow-row-col grid-rows-3 grid-cols-1 mx-2 my-3 sm:w-40 xl:w-50 box-border border-1 pb-2 rounded shadow transition-all hover:bg-orange-200 hover:scale-110"
>
  <section>
    <div
      className="flex self-center"
    >
      Loading Banner Image...
    </div>
  </section>
  <section
    className="mx-2 my-1 row-span-1"
  >
    <div
      className="font-bold text-lg cursor-pointer break-words line-clamp-2"
      onClick={[Function]}
      title="Es Teh Anget"
    >
      Es Teh Anget
    </div>
    <div
      className="text-gray-600 break-words line-clamp-3"
      title="Enak diminum untuk buka puasa"
    >
      Enak diminum untuk buka puasa
    </div>
  </section>
  <section
    className="object-bottom"
  >
    <div
      className="grid grid-cols-4 my-4"
    >
      <div
        className="w-3/4 m-auto"
      >
        <div>
          Loading Profile Image...
        </div>
      </div>
      <div
        className="col-span-3"
      >
        <div
          className="font-semibold text-sm cursor-pointer"
        >
          User 1
        </div>
        <div
          className="text-xs pl-1 text-gray-600 cursor-pointer"
        >
          5
        </div>
      </div>
    </div>
    <div
      className="text-center pt-1"
    >
      <div
        className="text-sm text-gray-600"
      >
         
        5
         
      </div>
    </div>
  </section>
</div>
`;

exports[`Test RecipeCard on recipe detail match the snapshot 1`] = `
<div
  className="flex-wrap mx-2 my-3 sm:w-40 xl:w-50 box-border border-1 pb-2 rounded shadow transition-all hover:bg-orange-200 hover:scale-110"
>
  <section>
    <div
      className="flex self-center"
    >
      Loading Banner Image...
    </div>
  </section>
  <section
    className="mx-2 my-1 row-span-2"
  >
    <div
      className="font-bold text-lg cursor-pointer break-words line-clamp-2"
      onClick={[Function]}
      title="Es Teh Anget"
    >
      Es Teh Anget
    </div>
    <div
      className="text-gray-600 break-words line-clamp-3"
      title="Enak diminum untuk buka puasa"
    >
      Enak diminum untuk buka puasa
    </div>
  </section>
</div>
`;
